[gd_scene load_steps=3 format=3 uid="uid://fillinblank_uid"]

[ext_resource type="Script" path="res://scripts/FillInBlank.gd" id="1_fillinblank"]
[ext_resource type="Theme" path="res://assets/vocab_cat_theme.tres" id="2_theme"]

[node name="FillInBlank" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_fillinblank")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HeaderBar" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 1240.0
offset_bottom = 80.0

[node name="TitleLabel" type="Label" parent="HeaderBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.973, 0.98, 0.988, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.3)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 28
text = "Complete the Sentence"

[node name="ProgressLabel" type="Label" parent="HeaderBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.973, 0.98, 0.988, 1)
theme_override_font_sizes/font_size = 22
text = "Question 1/10"
horizontal_alignment = 2

[node name="QuestionPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -200.0
offset_right = 350.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="QuestionPanel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SentenceLabel" type="Label" parent="QuestionPanel/VBoxContainer"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.973, 0.98, 0.988, 1)
theme_override_font_sizes/font_size = 20
text = "The garden had an _____ supply of fresh vegetables."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Spacer" type="Control" parent="QuestionPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="AnswerA" type="Button" parent="QuestionPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Answer A"

[node name="AnswerB" type="Button" parent="QuestionPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Answer B"

[node name="AnswerC" type="Button" parent="QuestionPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Answer C"

[node name="AnswerD" type="Button" parent="QuestionPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Answer D"

[node name="FeedbackLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.973, 0.98, 0.988, 1)
theme_override_font_sizes/font_size = 20
text = "Feedback"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Character" type="Node2D" parent="."]
position = Vector2(180, 400)

[node name="FooterBar" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 620.0
offset_right = 1240.0
offset_bottom = 680.0

[node name="ScoreLabel" type="Label" parent="FooterBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.973, 0.98, 0.988, 1)
theme_override_font_sizes/font_size = 22
text = "Score: 0/10"

[node name="NextButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1100.0
offset_top = 620.0
offset_right = 1240.0
offset_bottom = 680.0
theme_override_font_sizes/font_size = 20
text = "Next"

